refactor: replace manual DTO-entity mappings with MapStruct mappers and clean up unused code and comments